--- a/main/plugins/org.talend.hadoop.distribution.mapr610/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr610/plugin.xml
@@ -277,11 +277,19 @@
             mvn_uri="mvn:org.talend.libraries/parquet-pig-bundle-1.6.0/6.0.0">
         </libraryNeeded>
             
+		<!-- mapr pig pac contains pig-core-h2.jar, but to distinguish it from old versions, total pig version added -->  
        <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.6.1.0"
-            id="pig-core-h2.jar"
-            name="pig-core-h2.jar"
-            mvn_uri="mvn:org.talend.libraries/pig-core-h2/6.0.0">
+            id="pig-core-h2-0.16.0-1901.jar"
+            name="pig-core-h2-0.16.0-1901.jar"
+            mvn_uri="mvn:org.talend.libraries/pig-core-h2/0.16.0-1901">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop"
+            id="hbase-hadoop-compat-1.1.8-mapr-1901.jar"
+            name="hbase-hadoop-compat-1.1.8-mapr-1901.jar" 
+            mvn_uri="mvn:org.apache.parquet/hbase-hadoop-compat/1.1.8-mapr-1901" >
         </libraryNeeded>
 
         <libraryNeeded
@@ -1046,7 +1054,7 @@
 			<library id="lz4-1.3.0.jar"/>
 			<library id="maprdb-spark-2.3.1-mapr-1808.jar"/>
 			<library id="mesos-1.4.0-shaded-protobuf.jar"/>
-			<library id="metrics-core-3.1.2.jar"/>
+			<library id="metrics-core-3.1.5.jar"/>
 			<library id="metrics-graphite-3.1.5.jar"/>
 			<library id="metrics-json-3.1.5.jar"/>
 			<library id="metrics-jvm-3.1.5.jar"/>
@@ -1165,7 +1173,7 @@
             <library id="hive-exec-2.3.3-mapr-1901.jar"/> <!-- was hive-exec-1.2.0-mapr-1710.jar-->
             <library id="hive-metastore-2.3.3-mapr-1901.jar"/>
             <library id="flexjson-2.1.jar"/>
-            <library id="pig-core-h2.jar"/>
+            <library id="pig-core-h2-0.16.0-1901.jar"/>
             <library id="automaton-1.11-8.jar"/>
 			<library id="javax.servlet-api-3.1.0.jar"/>
         </libraryNeededGroup>
@@ -1197,6 +1205,7 @@
            <library id="hbase-client-1.1.8-mapr-1901.jar" />
            <library id="hbase-common-1.1.8-mapr-1901.jar" />
            <library id="hbase-protocol-1.1.8-mapr-1901.jar" />
+			<library id="hbase-hadoop-compat-1.1.8-mapr-1901.jar"/>
            <library id="hbase-hadoop2-compat-1.1.8-mapr-1901.jar" />
            <library id="high-scale-lib-1.1.1.jar"/>
            <library id="hive-hbase-handler-2.3.3-mapr-1901.jar"/>
@@ -1204,6 +1213,7 @@
            <library id="hadoop-hdfs-2.7.0-mapr-1808.jar" />
            <library id="hadoop-auth-2.7.0-mapr-1808.jar"/>
            <library id="hadoop-common-2.7.0-mapr-1808.jar"/>
+           <library id="metrics-core-2.2.0.jar"/>
         </libraryNeededGroup>
         
         <!-- Pig parquet group -->
