--- a/main/plugins/org.talend.hadoop.distribution.mapr610/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr610/plugin.xml
@@ -773,7 +773,6 @@
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.1.0" id="hadoop-aws-2.7.0-mapr-1808.jar" name="hadoop-aws-2.7.0-mapr-1808.jar" mvn_uri="mvn:org.talend.libraries/hadoop-aws/2.7.0-mapr-1808"/>
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.1.0" id="jets3t-0.9.4.jar" name="jets3t-0.9.4.jar" mvn_uri="mvn:org.talend.libraries/jets3t/0.9.4"/>
 		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.1.0" id="avro-1.8.1.jar" name="avro-1.8.1.jar" mvn_uri="mvn:org.apache.avro/avro/1.8.1"/>
-		<libraryNeeded context="plugin:org.talend.hadoop.distribution.mapr.6.1.0" id="aws-java-sdk-bundle-1.11.199.jar" name="aws-java-sdk-bundle-1.11.199.jar" mvn_uri="mvn:org.talend.libraries/aws-java-sdk-bundle/1.11.199"/>
 
 		<!-- Groups -->
         <libraryNeededGroup
@@ -782,7 +781,7 @@
                 name="S3-LIB-MAPR610">
             <library id="aws-java-sdk-bundle-1.11.199.jar" />
             <library id="hadoop-aws-2.7.0-mapr-1808.jar" />
-            <library id="jets3t-0.9.4" />
+            <library id="jets3t-0.9.4.jar" />
             <library id="httpclient-4.5.4.jar" />
             <library id="httpcore-4.4.8.jar" />
             <library id="joda-time-2.9.3.jar" />
