--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaLoad/tImpalaLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaLoad/tImpalaLoad_messages.properties
@@ -14,23 +14,47 @@ DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 IMPALA_VERSION.NAME=Impala version
 IMPALA_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1
 IMPALA_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4
+IMPALA_VERSION.ITEM.Cloudera_CDH5_12=Cloudera CDH5.12
+IMPALA_VERSION.ITEM.Cloudera_CDH6_1=Cloudera CDH6.1
+
 PROPERTY.NAME=Property Type
-USE_EXISTING_CONNECTION.NAME=Use an existing connection
 HOST.NAME=Host
 PORT.NAME=Port
 DBNAME.NAME=Database
 USER.NAME=Username
 PASS.NAME=Password
-SCHEMA.NAME=Schema
-TABLE.NAME=Table Name
-DBTABLE.NAME=Table Name
+
+IMPALA_DRIVER.NAME=Impala Driver
+IMPALA_DRIVER.ITEM.IMPALA40=Impala40
+IMPALA_DRIVER.ITEM.IMPALA41=Impala41
+IMPALA_DRIVER.ITEM.HIVE2=Hive2
+IMPALA_ADDITIONAL_JDBC.NAME=Additional JDBC Settings
 
 USE_KRB.NAME=Use Kerberos authentication
 IMPALA_PRINCIPAL.NAME=Impala principal
 AUTHENTICATION.NAME=Authentication
 
-QUERY.NAME=Query
+USE_KEYTAB.NAME=Use a keytab to authenticate
+PRINCIPAL.NAME=Principal
+KEYTAB_PATH.NAME=Keytab
 
+USE_SSL.NAME=Use SSL encryption
+SSL_TRUST_STORE.NAME=Trust store path
+SSL_TRUST_STORE_PASSWORD.NAME=Trust store password
+ENCRYPTION.NAME=Encryption
+
+ADVANCED_PROPERTIES.NAME=Connection Properties 
+ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
+HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+TABLE.NAME=Table Name
+QUERY.NAME=Query
+SCHEMA.NAME=Schema
+DBTABLE.NAME=Table Name
 
 LOAD_ACTION.NAME=Load action
 LOAD_ACTION.ITEM.LOAD=LOAD
