--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages.properties
@@ -16,7 +16,7 @@ DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X (Deprecated)
 DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X (Deprecated)
 DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X (Deprecated)
 DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X (Deprecated)
-DB_VERSION.ITEM.NEO4J_3_2_X=Neo4J 3.2.X
+DB_VERSION.ITEM.NEO4J_3_2_X=Neo4J 3.2.X - 3.5.X
 
 SET_USERNAME.NAME=set username
 USERNAME.NAME=Username
