--- a/main/plugins/org.talend.hadoop.distribution.mapr610/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr610/plugin.xml
@@ -1315,7 +1315,7 @@
         </libraryNeededGroup>        
 
         <!-- Spark Hive group MRREQUIRED -->
-        <!--libraryNeededGroup
+        <libraryNeededGroup
                 description="Spark Hive libraries for MapR 6.1.0 that are MRREQUIRED"
                 id="SPARK-HIVE-LIB-MRREQUIRED-MAPR610"
                 name="SPARK-HIVE-LIB-MRREQUIRED-MAPR610">
@@ -1323,7 +1323,7 @@
            <library id="datanucleus-api-jdo-4.2.4.jar" />
            <library id="datanucleus-core-4.1.6.jar" />
            <library id="datanucleus-rdbms-4.1.19.jar" />
-        </libraryNeededGroup-->
+        </libraryNeededGroup>
         
         <!-- Spark Flume group MRREQUIRED -->
         <libraryNeededGroup
