--- a/main/plugins/org.talend.designer.pigmap/build.properties
+++ b/main/plugins/org.talend.designer.pigmap/build.properties
@@ -1,8 +1,7 @@
 source.. = src/main/java/
-output.. = class/
+output..=target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .,\
                icons/,\
                plugin.properties,\
                resources/PigExpressionBuilder.xml
