--- a/main/plugins/org.talend.hadoop.distribution.custom/build.properties
+++ b/main/plugins/org.talend.hadoop.distribution.custom/build.properties
@@ -1,6 +1,5 @@
 source..=src/main/java/
-output..=target/
+output..=target/classes/
 bin.includes = META-INF/,\
-               .,\
                plugin.xml,\
                OSGI-INF/
