--- a/org.talend.hadoop.distribution.dbr540/plugin.xml
+++ b/org.talend.hadoop.distribution.dbr540/plugin.xml
@@ -5,129 +5,129 @@
          point="org.talend.core.runtime.librariesNeeded">
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="talend-bigdata-launcher-platform-1.3.2.jar"
             name="talend-bigdata-launcher-platform-1.3.2.jar"
             mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.3.2/6.0.0">
         </libraryNeeded>
                            
 		 <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="avro-mapred-1.7.7-hadoop2.jar"
             name="avro-mapred-1.7.7-hadoop2.jar"
             mvn_uri="mvn:org.apache.avro/avro-mapred/1.7.7-hadoop2"/>
               
          <!--  -->
          <libraryNeeded 
-         	context="plugin:org.talend.hadoop.distribution.databricks" 
+         	context="plugin:org.talend.hadoop.distribution.dbr540" 
          	id="commons-codec-1.10.jar" 
          	name="commons-codec-1.10.jar" 
          	mvn_uri="mvn:commons-codec/commons-codec/1.10"/>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="commons-lang-2.6.jar"
             name="commons-lang-2.6.jar"
             mvn_uri="mvn:commons-lang/commons-lang/2.6">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="commons-lang3-3.5.jar"
             name="commons-lang3-3.5.jar"
             mvn_uri="mvn:org.apache.commons/commons-lang3/3.5">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="commons-logging-1.2.jar"
             name="commons-logging-1.2.jar"
             mvn_uri="mvn:commons-logging/commons-logging/1.2">
         </libraryNeeded>
         
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="hadoop-common-2.7.3.jar"
             name="hadoop-common-2.7.3.jar"
             mvn_uri="mvn:org.apache.hadoop/hadoop-common/2.7.3">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="hadoop-mapreduce-client-core-2.7.3.jar"
             name="hadoop-mapreduce-client-core-2.7.3.jar"
             mvn_uri="mvn:org.apache.hadoop/hadoop-mapreduce-client-core/2.7.3">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="kryo-shaded-3.0.3.jar"
             name="kryo-shaded-3.0.3.jar"
             mvn_uri="mvn:com.esotericsoftware/kryo-shaded/3.0.3">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="scala-library-2.11.8.jar"
             name="scala-library-2.11.8.jar"
             mvn_uri="mvn:org.scala-lang/scala-library/2.11.8">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="scala-reflect-2.11.8.jar"
             name="scala-reflect-2.11.8.jar"
             mvn_uri="mvn:org.scala-lang/scala-reflect/2.11.8">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="slf4j-api-1.7.16.jar"
             name="slf4j-api-1.7.16.jar"
             mvn_uri="mvn:org.slf4j/slf4j-api/1.7.16">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-catalyst_2.11-2.2.1.jar"
             name="spark-catalyst_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-core_2.11-2.2.1.jar"
             name="spark-core_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-graphx_2.11-2.2.1.jar"
             name="spark-graphx_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-hive_2.11-2.2.1.jar"
             name="spark-hive_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-hive_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-mllib-local_2.11-2.2.1.jar"
             name="spark-mllib-local_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-mllib_2.11-2.2.1.jar"
             name="spark-mllib_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-network-common_2.11-2.2.1.jar"
             name="spark-network-common_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-sql_2.11-2.2.1.jar"
             name="spark-sql_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-streaming_2.11-2.2.1.jar"
             name="spark-streaming_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-streaming_2.11/2.2.1">
@@ -183,50 +183,50 @@
         </libraryNeeded>
         
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
             name="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
             mvn_uri="mvn:org.apache.spark/spark-streaming-kinesis-asl_2.11/2.2.0"/>
 
        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="amazon-kinesis-client-1.8.1.jar"
             name="amazon-kinesis-client-1.8.1.jar"
             mvn_uri="mvn:com.amazonaws/amazon-kinesis-client/1.8.1"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
-            id="aws-java-sdk-core-1.11.160.jar"
-            name="aws-java-sdk-core-1.11.160.jar"
-            mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.160"/>
+            context="plugin:org.talend.hadoop.distribution.dbr540"
+            id="aws-java-sdk-core-1.11.126.jar"
+            name="aws-java-sdk-core-1.11.126.jar"
+            mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.126"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
-            id="aws-java-sdk-kinesis-1.11.160.jar"
-            name="aws-java-sdk-kinesis-1.11.160.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.11.160/6.0.0"/>
+            context="plugin:org.talend.hadoop.distribution.dbr540"
+            id="aws-java-sdk-kinesis-1.11.126.jar"
+            name="aws-java-sdk-kinesis-1.11.126.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.11.126/6.0.0"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="gson-2.3.jar"
             name="gson-2.3.jar"
             mvn_uri="mvn:com.google.code.gson/gson/2.3"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="jackson-databind-2.8.9.jar"
             name="jackson-databind-2.8.9.jar"
             mvn_uri="mvn:com.fasterxml.jackson.core/jackson-databind/2.8.9"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.databricks"
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="jackson-annotations-2.8.9.jar"
             name="jackson-annotations-2.8.9.jar"
             mvn_uri="mvn:com.fasterxml.jackson.core/jackson-annotations/2.8.9"/>
 
         <!-- Big Data launcher group -->
         <libraryNeededGroup
-                description="Big Data launcher libraries for Databricks"
+                description="Big Data launcher libraries for DBR540"
                 id="BIGDATA-LAUNCHER-LIB-DATABRICKS"
                 name="BIGDATA-LAUNCHER-LIB-DATABRICKS"  >
 			<library id="talend-bigdata-launcher-platform-1.3.2.jar" />
@@ -238,7 +238,7 @@
         
         <!-- Spark group -->
         <libraryNeededGroup
-                description="SPARK libraries for Databricks"
+                description="SPARK libraries for DBR540"
                 id="SPARK-LIB-MRREQUIRED-DATABRICKS"
                 name="SPARK-LIB-MRREQUIRED-DATABRICKS">
              <library id="azure-storage-5.0.0.jar"/>
@@ -271,7 +271,7 @@
 
         <!-- Spark Streaming group -->
         <libraryNeededGroup
-                description="SPARK libraries for Databricks"
+                description="SPARK libraries for DBR540"
                 id="SPARK-STREAMING-LIB-MRREQUIRED-DATABRICKS"
                 name="SPARK-STREAMING-LIB-MRREQUIRED-DATABRICKS">
              <library id="spark-streaming_2.11-2.2.1.jar"/>
@@ -280,17 +280,17 @@
         
         <!-- Spark Streaming Kinesis group -->
         <libraryNeededGroup
-                description="SPARK libraries for Databricks"
+                description="SPARK libraries for DBR540"
                 id="SPARK-STREAMING-LIB-KINESIS-DATABRICKS"
                 name="SPARK-STREAMING-LIB-KINESIS-DATABRICKS">
              <library id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"/>
             <library id="amazon-kinesis-client-1.8.1.jar"/>
-            <library id="aws-java-sdk-kinesis-1.11.160.jar"/>
-            <library id="aws-java-sdk-core-1.11.160.jar"/>
+            <library id="aws-java-sdk-kinesis-1.11.126.jar"/>
+            <library id="aws-java-sdk-core-1.11.126.jar"/>
         </libraryNeededGroup>
         <!-- HiveOnSpark group -->
         <libraryNeededGroup
-                description="Hive On SPARK libraries for Databricks"
+                description="Hive On SPARK libraries for DBR540"
                 id="HIVEONSPARK-LIB-MRREQUIRED-DATABRICKS"
                 name="HIVEONSPARK-LIB-MRREQUIRED-DATABRICKS">
              <library id="spark-hive_2.11-2.2.1.jar"/>
@@ -298,7 +298,7 @@
         
         <!-- Spark Azure group -->
         <libraryNeededGroup
-                description="Hive On SPARK libraries for Databricks"
+                description="Hive On SPARK libraries for DBR540"
                 id="SPARK-AZURE-LIB-MRREQUIRED-DATABRICKS"
                 name="SPARK-AZURE-LIB-MRREQUIRED-DATABRICKS">
              <library id="hadoop-azure-datalake-2.8.1.jar"/>
