--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
@@ -6,6 +6,7 @@ KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
 KAFKA_VERSION.ITEM.KAFKA_0_9_0_1=Kafka 0.9.0.1
 KAFKA_VERSION.ITEM.KAFKA_0_10_0_1=Kafka 0.10.0.1
 KAFKA_VERSION.ITEM.KAFKA_1_1_0=Kafka 1.1.0
+KAFKA_VERSION.ITEM.KAFKA_2_2_1=Kafka 2.2.1
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
 BROKER_LIST.NAME=Broker list
 
