--- a/main/plugins/org.talend.hadoop.distribution.dbr350/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr350/pom.xml
@@ -7,6 +7,6 @@
     <version>7.3.1-SNAPSHOT</version>
     <relativePath>../../../</relativePath>
   </parent>
-  <artifactId>org.talend.hadoop.distribution.databricks</artifactId>
+  <artifactId>org.talend.hadoop.distribution.dbr350</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
