--- a/main/plugins/org.talend.hadoop.distribution.dbr540/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr540/plugin.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encodi!!ng="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
    <extension
@@ -10,19 +10,18 @@
             name="talend-bigdata-launcher-platform-1.3.2.jar"
             mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.3.2/6.0.0">
         </libraryNeeded>
-                           
-		 <libraryNeeded
+		<libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="avro-mapred-1.7.7-hadoop2.jar"
-            name="avro-mapred-1.7.7-hadoop2.jar"
-            mvn_uri="mvn:org.apache.avro/avro-mapred/1.7.7-hadoop2"/>
-              
-         <!--  -->
-         <libraryNeeded 
+            id="avro-mapred-1.8.2-hadoop2.jar"
+            name="avro-mapred-1.8.2-hadoop2.jar"
+            mvn_uri="mvn:org.apache.avro/avro-mapred/1.8.2-hadoop2">
+        </libraryNeeded>
+        <libraryNeeded 
          	context="plugin:org.talend.hadoop.distribution.dbr540" 
          	id="commons-codec-1.10.jar" 
          	name="commons-codec-1.10.jar" 
-         	mvn_uri="mvn:commons-codec/commons-codec/1.10"/>
+         	mvn_uri="mvn:commons-codec/commons-codec/1.10">
+        </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
             id="commons-lang-2.6.jar"
@@ -37,9 +36,9 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="commons-logging-1.2.jar"
-            name="commons-logging-1.2.jar"
-            mvn_uri="mvn:commons-logging/commons-logging/1.2">
+            id="commons-logging-1.1.3.jar"
+            name="commons-logging-1.1.3.jar"
+            mvn_uri="mvn:commons-logging/commons-logging/1.1.3">
         </libraryNeeded>
         
         <libraryNeeded
@@ -56,21 +55,21 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="kryo-shaded-3.0.3.jar"
-            name="kryo-shaded-3.0.3.jar"
-            mvn_uri="mvn:com.esotericsoftware/kryo-shaded/3.0.3">
+            id="kryo-shaded-4.0.2.jar"
+            name="kryo-shaded-4.0.2.jar"
+            mvn_uri="mvn:com.esotericsoftware/kryo-shaded/4.0.2">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="scala-library-2.11.8.jar"
-            name="scala-library-2.11.8.jar"
-            mvn_uri="mvn:org.scala-lang/scala-library/2.11.8">
+            id="scala-library-2.11.12.jar"
+            name="scala-library-2.11.12.jar"
+            mvn_uri="mvn:org.scala-lang/scala-library/2.11.12">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="scala-reflect-2.11.8.jar"
-            name="scala-reflect-2.11.8.jar"
-            mvn_uri="mvn:org.scala-lang/scala-reflect/2.11.8">
+            id="scala-reflect-2.11.12.jar"
+            name="scala-reflect-2.11.12.jar"
+            mvn_uri="mvn:org.scala-lang/scala-reflect/2.11.12">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
@@ -80,64 +79,64 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-catalyst_2.11-2.2.1.jar"
-            name="spark-catalyst_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.2.1">
+            id="spark-catalyst_2.11-2.4.3.jar"
+            name="spark-catalyst_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-core_2.11-2.2.1.jar"
-            name="spark-core_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.2.1">
+            id="spark-core_2.11-2.4.3.jar"
+            name="spark-core_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-graphx_2.11-2.2.1.jar"
-            name="spark-graphx_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.2.1">
+            id="spark-graphx_2.11-2.4.3.jar"
+            name="spark-graphx_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-hive_2.11-2.2.1.jar"
-            name="spark-hive_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-hive_2.11/2.2.1">
+            id="spark-hive_2.11-2.4.3.jar"
+            name="spark-hive_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-hive_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-mllib-local_2.11-2.2.1.jar"
-            name="spark-mllib-local_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.2.1">
+            id="spark-mllib-local_2.11-2.4.3.jar"
+            name="spark-mllib-local_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-mllib_2.11-2.2.1.jar"
-            name="spark-mllib_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.2.1">
+            id="spark-mllib_2.11-2.4.3.jar"
+            name="spark-mllib_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-network-common_2.11-2.2.1.jar"
-            name="spark-network-common_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.1">
+            id="spark-network-common_2.11-2.4.3.jar"
+            name="spark-network-common_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-sql_2.11-2.2.1.jar"
-            name="spark-sql_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.2.1">
+            id="spark-sql_2.11-2.4.3.jar"
+            name="spark-sql_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.4.3">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="spark-streaming_2.11-2.2.1.jar"
-            name="spark-streaming_2.11-2.2.1.jar"
-            mvn_uri="mvn:org.apache.spark/spark-streaming_2.11/2.2.1">
+            id="spark-streaming_2.11-2.4.3.jar"
+            name="spark-streaming_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-streaming_2.11/2.4.3">
         </libraryNeeded>
         
         <libraryNeeded
             context="Third party library to connect to Windows Azure"
-            id="azure-storage-5.0.0.jar"
-            name="azure-storage-5.0.0.jar"
-            mvn_uri="mvn:com.microsoft.azure/azure-storage/5.0.0">
+            id="azure-storage-5.2.0.jar"
+            name="azure-storage-5.2.0.jar"
+            mvn_uri="mvn:com.microsoft.azure/azure-storage/5.2.0">
         </libraryNeeded>
         <libraryNeeded
               bundleID="org.apache.servicemix.bundles.wsdl4j"
@@ -149,10 +148,10 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.libraries.jackson"
-            id="jackson-core-2.8.9.jar"
-            name="jackson-core-2.8.9.jar"
-            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.8.9"
-            uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.8.9.jar">
+            id="jackson-core-2.6.7.jar"
+            name="jackson-core-2.6.7.jar"
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.6.7"
+            uripath="platform:/plugin/org.talend.libraries.jackson/lib/jackson-core-2.6.7.jar">
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.libraries.apache.cxf"
@@ -190,39 +189,39 @@
 
        <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="amazon-kinesis-client-1.8.1.jar"
-            name="amazon-kinesis-client-1.8.1.jar"
-            mvn_uri="mvn:com.amazonaws/amazon-kinesis-client/1.8.1"/>
+            id="amazon-kinesis-client-1.8.10.jar"
+            name="amazon-kinesis-client-1.8.10.jar"
+            mvn_uri="mvn:com.amazonaws/amazon-kinesis-client/1.8.10"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="aws-java-sdk-core-1.11.126.jar"
-            name="aws-java-sdk-core-1.11.126.jar"
-            mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.160"/>
+            id="aws-java-sdk-core-1.11.313.jar"
+            name="aws-java-sdk-core-1.11.313.jar"
+            mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.313"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="aws-java-sdk-kinesis-1.11.126.jar"
-            name="aws-java-sdk-kinesis-1.11.126.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.11.126/6.0.0"/>
+            id="aws-java-sdk-kinesis-1.11.313.jar"
+            name="aws-java-sdk-kinesis-1.11.313.jar"
+            mvn_uri="mvn:com.amazonaws/aws-java-sdk-kinesis/1.11.313"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="gson-2.3.jar"
-            name="gson-2.3.jar"
-            mvn_uri="mvn:com.google.code.gson/gson/2.3"/>
+            id="gson-2.2.4.jar"
+            name="gson-2.2.4.jar"
+            mvn_uri="mvn:com.google.code.gson/gson/2.2.4"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="jackson-databind-2.8.9.jar"
-            name="jackson-databind-2.8.9.jar"
-            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-databind/2.8.9"/>
+            id="jackson-databind-2.6.7.1.jar"
+            name="jackson-databind-2.6.7.1.jar"
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-databind/2.6.7.1"/>
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
-            id="jackson-annotations-2.8.9.jar"
-            name="jackson-annotations-2.8.9.jar"
-            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-annotations/2.8.9"/>
+            id="jackson-annotations-2.6.7.jar"
+            name="jackson-annotations-2.6.7.jar"
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-annotations/2.6.7"/>
 
         <!-- Big Data launcher group -->
         <libraryNeededGroup
@@ -230,10 +229,10 @@
                 id="BIGDATA-LAUNCHER-LIB-DATABRICKS"
                 name="BIGDATA-LAUNCHER-LIB-DATABRICKS"  >
 			<library id="talend-bigdata-launcher-platform-1.3.2.jar" />
-			<library id="gson-2.3.jar" />
-			<library id="jackson-core-2.8.9.jar" />
-			<library id="jackson-databind-2.8.9.jar" />
-			<library id="jackson-annotations-2.8.9.jar" />
+			<library id="gson-2.2.4.jar" />
+			<library id="jackson-core-2.6.7.jar" />
+			<library id="jackson-databind-2.6.7.1.jar" />
+			<library id="jackson-annotations-2.6.7.jar" />
         </libraryNeededGroup>
         
         <!-- Spark group -->
@@ -241,30 +240,30 @@
                 description="SPARK libraries for DBR540"
                 id="SPARK-LIB-MRREQUIRED-DATABRICKS"
                 name="SPARK-LIB-MRREQUIRED-DATABRICKS">
-             <library id="azure-storage-5.0.0.jar"/>
-             <library id="avro-mapred-1.7.7-hadoop2.jar"/>
+             <library id="azure-storage-5.2.0.jar"/>
+             <library id="avro-mapred-1.8.2-hadoop2.jar"/>
              <library id="commons-codec-1.10.jar"/>
              <library id="commons-lang-2.6.jar"/>
              <library id="commons-lang3-3.5.jar"/>
-             <library id="commons-logging-1.2.jar"/>
+             <library id="commons-logging-1.1.3.jar"/>
              <library id="cxf-rt-rs-client-3.2.4.jar"/>
              <library id="cxf-bundle-jaxrs-2.7.18.jar"/>
              <library id="hadoop-common-2.7.3.jar"/>
              <library id="hadoop-mapreduce-client-core-2.7.3.jar"/>
-             <library id="kryo-shaded-3.0.3.jar"/>
-             <library id="scala-library-2.11.8.jar"/>
-             <library id="scala-reflect-2.11.8.jar"/>
+             <library id="kryo-shaded-4.0.2.jar"/>
+             <library id="scala-library-2.11.12.jar"/>
+             <library id="scala-reflect-2.11.12.jar"/>
              <library id="slf4j-api-1.7.16.jar"/>
-             <library id="spark-catalyst_2.11-2.2.1.jar"/>
-             <library id="spark-core_2.11-2.2.1.jar"/>
-             <library id="spark-graphx_2.11-2.2.1.jar"/>
-             <library id="spark-mllib-local_2.11-2.2.1.jar"/>
-             <library id="spark-mllib_2.11-2.2.1.jar"/>
-             <library id="spark-sql_2.11-2.2.1.jar"/>
-             <library id="spark-streaming_2.11-2.2.1.jar"/>
-             <library id="spark-network-common_2.11-2.2.1.jar"/>
+             <library id="spark-catalyst_2.11-2.4.3.jar"/>
+             <library id="spark-core_2.11-2.4.3.jar"/>
+             <library id="spark-graphx_2.11-2.4.3.jar"/>
+             <library id="spark-mllib-local_2.11-2.4.3.jar"/>
+             <library id="spark-mllib_2.11-2.4.3.jar"/>
+             <library id="spark-sql_2.11-2.4.3.jar"/>
+             <library id="spark-streaming_2.11-2.4.3.jar"/>
+             <library id="spark-network-common_2.11-2.4.3.jar"/>
              <library id="wsdl4j-1.6.3.jar"/>
-             <library id="jackson-core-2.8.9.jar"/>
+             <library id="jackson-core-2.6.7.jar"/>
              <library id="javax.ws.rs-api-2.0-m10.jar"/>
              <library id="json_simple-1.1.jar"/>
         </libraryNeededGroup>
@@ -274,7 +273,7 @@
                 description="SPARK libraries for DBR540"
                 id="SPARK-STREAMING-LIB-MRREQUIRED-DATABRICKS"
                 name="SPARK-STREAMING-LIB-MRREQUIRED-DATABRICKS">
-             <library id="spark-streaming_2.11-2.2.1.jar"/>
+             <library id="spark-streaming_2.11-2.4.3.jar"/>
         </libraryNeededGroup>
         
         
@@ -284,7 +283,7 @@
                 id="SPARK-STREAMING-LIB-KINESIS-DATABRICKS"
                 name="SPARK-STREAMING-LIB-KINESIS-DATABRICKS">
              <library id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"/>
-            <library id="amazon-kinesis-client-1.8.1.jar"/>
+            <library id="amazon-kinesis-client-1.8.10.jar"/>
             <library id="aws-java-sdk-kinesis-1.11.126.jar"/>
             <library id="aws-java-sdk-core-1.11.126.jar"/>
         </libraryNeededGroup>
@@ -293,7 +292,7 @@
                 description="Hive On SPARK libraries for DBR540"
                 id="HIVEONSPARK-LIB-MRREQUIRED-DATABRICKS"
                 name="HIVEONSPARK-LIB-MRREQUIRED-DATABRICKS">
-             <library id="spark-hive_2.11-2.2.1.jar"/>
+             <library id="spark-hive_2.11-2.4.3.jar"/>
         </libraryNeededGroup>
         
         <!-- Spark Azure group -->
